src/component/home/home.component.scss
@use "../../styles.scss";

#home {
    height: 100%;
}
.container_title_greatings {
    width: 100%;
    padding: 4rem 0;
    margin: 0 0;
    position: relative;
}
.title_greatings,
.title_greatings_2 {
    text-align: center;
    font-size: 60px;
    transform: translateX(-50%);
    position: absolute;
    left: 50%;
}

.title_greatings {
    top: 50%;
}
.title_greatings_2 {
    color: styles.$text-wh;
    top: 46%;
}
#welcome {
    margin: 2rem 0 0;
    display: flex;
    justify-content: center;
    align-items: center;
}

.link_page {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}
.text {
    text-align: center;
    padding: 1rem 0;
    font-size: 26px;
    width: 400px;
    & a {
        text-decoration: none;
        color: white;
    }
    & a:hover .hidden {
        display: inline;
        color: white;
    }
}
.hidden {
    color: transparent;
}

.img_welcome {
    display: block;
    width: 500px;
    height: 415px;
    border-bottom: 10px solid styles.$text-wh;
    border-bottom-left-radius: 15px;
    border-right: 10px solid styles.$secondary-color;
    position: relative;
    & .which_one {
        color: styles.$text-wh;
        position: absolute;
        top: 62%;
        left: 31%;
        animation: pulse 2s infinite;
    }
    & .image_login {
        width: 500px;
        height: 425px;
        border-radius: 20px;
        object-fit: cover;
    }
}
@keyframes pulse {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

/* #region media screen */

@media screen and (min-width: 320px) and (max-width: 426px) {
    .container_title_greatings {
        max-width: 426px;
    }
    .title_greatings,
    .title_greatings_2 {
        font-size: 28px;
        width: 200px;
    }
    .title_greatings_2 {
        top: 47.5%;
    }
    .text {
        font-size: 12px;
        max-width: 426px;
        width: 140px;
        padding: 6px 0;
        margin: 0 0 0 -0.5rem;
    }
    .img_welcome {
        display: block;
        width: 180px;
        height: 154px;
        border-bottom: 5px solid styles.$text-wh;
        border-bottom-left-radius: 15px;
        border-right: 5px solid styles.$secondary-color;
        & .which_one {
            font-size: 5px;
            top: 64%;
            left: 32.5%;
        }
        & .image_login {
            width: 180px;
            height: 160px;
            border-radius: 20px;
            object-fit: cover;
        }
    }
}
@media screen and (min-width: 426px) and (max-width: 768px) {
    .container_title_greatings {
        min-width: 426px;
    }
    .title_greatings,
    .title_greatings_2 {
        font-size: 32px;
        width: 350px;
    }
    .title_greatings_2 {
        top: 48%;
    }
    .text {
        font-size: 18px;
        max-width: 426px;
        width: 200px;
        padding: 6px 0;
        margin: 0 0 0 -0.5rem;
    }
    .img_welcome {
        display: block;
        width: 222px;
        height: 190px;
        border-bottom: 7px solid styles.$text-wh;
        border-bottom-left-radius: 15px;
        border-right: 7px solid styles.$secondary-color;
        & .which_one {
            font-size: 7px;
            top: 64%;
            left: 31%;
        }
        & .image_login {
            width: 220px;
            height: 200px;
        }
    }
}
@media screen and (min-width: 768px) and (max-width: 1024px) {
    .container_title_greatings {
        min-width: 426px;
        padding: 1.5rem 0;
        margin: 3rem 0;
    }
    .title_greatings,
    .title_greatings_2 {
        font-size: 46px;
        width: 500px;
    }
    .title_greatings_2 {
        top: 42%;
    }
    #welcome {
        margin: 8rem 0 0;
    }
    .text {
        font-size: 28px;
        max-width: 426px;
        width: 350px;
        padding: 6px 0;
        margin: 0 0 0 -0.5rem;
    }
    .img_welcome {
        display: block;
        width: 350px;
        height: 312px;
        border-bottom: 9px solid styles.$text-wh;
        border-bottom-left-radius: 15px;
        border-right: 9px solid styles.$secondary-color;
        & .which_one {
            font-size: 11px;
            top: 65.5%;
            left: 31.5%;
        }
        & .image_login {
            width: 350px;
            height: 340px;
        }
    }
}
@media screen and (min-width: 1024px) and (max-width: 1440px) {
    .container_title_greatings {
        min-width: 426px;
        padding: 1rem 0;
        margin: 1rem 0;
    }
    .title_greatings,
    .title_greatings_2 {
        font-size: 65px;
        width: 700px;
    }
    .title_greatings_2 {
        top: 39%;
    }
    #welcome {
        margin: 5rem 0 0;
    }
    .text {
        font-size: 34px;
        max-width: 426px;
        width: 500px;
        padding: 6px 0;
        margin: 0 0 0 -0.5rem;
    }
    .img_welcome {
        display: block;
        width: 450px;
        height: 402px;
        border-bottom: 12px solid styles.$text-wh;
        border-bottom-left-radius: 15px;
        border-right: 12px solid styles.$secondary-color;
        & .which_one {
            font-size: 14px;
            top: 65.5%;
            left: 31%;
        }
        & .image_login {
            width: 448px;
            height: 440px;
        }
    }  
}
@media screen and (min-width: 1440px) and (max-width: 1600px) {
}
@media screen and (min-width: 1600px) and (max-width: 1920px) {
}
@media screen and (min-width: 1920px) and (max-width: 2140px) {
}
@media screen and (min-width: 2140px) and (max-width: 3860px) {
}
@media screen and (min-width: 3860px) {
}

/* #endregion media screen */

